--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Unionen</title>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFyAW1y3DGXM6YcgSEZSmxCUDQwZILCx0&libraries=places"></script>
   </head>
   <body>
     <noscript>
